# muzzi

./: Cargo.toml  README.md  metadata.json  package-lock.json
ft_worker/: Cargo.toml
ft_worker/src/: ft_worker_lib.rs  lib.rs
muzz/: Cargo.toml
muzz/src/: lib.rs  messages.rs  types.rs
pkg/: manifest.json
pkg/ui/: index.html
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.module.css  App.tsx  index.css
ui/src/components/panels/: Discovery.tsx  Downloader.tsx  Friends.tsx  Player.tsx  Playlist.tsx  Profile.tsx  Search.tsx  Settings.tsx
ui/src/components/shared/: Panel.tsx
ui/src/store/: muzzi_player.ts
ui/src/types/: MuzziPlayer.ts  panel.ts
ui/src/utils/: layoutManager.ts
