[package]
name = "ft_worker"
version = "0.2.0"
edition = "2021"

[features]
simulation-mode = []

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = "0.9.6"
process_macros = { git = "https://github.com/kinode-dao/process_macros", rev = "626e501" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
wit-bindgen = "0.24.0"
zip = { version = "1.1.4", default-features = false, features = ["deflate"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
